# domino_lineare

./: CMakeLists.txt  Doxyfile  README.md
docs/: Doxyfile
docs/html/: 2D__autocomplete_8h_source.html  2D__gamemode_8h_source.html  2D__print_8h_source.html  annotated.html  autocomplete_8h_source.html  challenge_8h_source.html  classes.html  dir_09513444a62afde5335395315f30f6d3.html  dir_09513444a62afde5335395315f30f6d3_dep.dot  dir_478c421f4817fd4af55fc950fed654bf.html  dir_478c421f4817fd4af55fc950fed654bf_dep.dot  dir_528b8697e02b3e7e91f6cad2c0be38b6.html  dir_528b8697e02b3e7e91f6cad2c0be38b6_dep.dot  dir_5add778196fadae4822ef6ec9b5d37e1.html  dir_5add778196fadae4822ef6ec9b5d37e1_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6a171c3f8ce12819a44bd0e9a450ab46.html  dir_6a171c3f8ce12819a44bd0e9a450ab46_dep.dot  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_ac10f258a2b9698af650c5f4839e009e.html  dir_ac10f258a2b9698af650c5f4839e009e_dep.dot  dir_c1bea2c7df62b480cf1ca929a80e0953.html  dir_c1bea2c7df62b480cf1ca929a80e0953_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d9df99bba169678ac8f965ce38851881.html  dir_d9df99bba169678ac8f965ce38851881_dep.dot  dir_f89abcb304c928c7d889aa5625570de5.html  dir_f89abcb304c928c7d889aa5625570de5_dep.dot  files.html  (+16 more)
html/: doxygen_crawl.html  index.html  md_README.html  pages.html
include/: 2D_autocomplete.h  2D_gamemode.h  2D_print.h  autocomplete.h  challenge.h  game.h  main.h  matrix.h  print.h  view_menu.h
latex/: md_README.tex  refman.tex
src/: autocomplete.c  game.c  main.c  matrix.c  print.c  view_menu.c
(+41 files in other folders)
